--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <p>
-        hola profe
-    </p>
-    Soy la verga
+        hola profe, Soy la verga. 
+    </p> 
 </body>
 </html>
